Fixing hamburger menu position being off on mobile. Explicitly definining the height of the hamburger menu icon, instead of letting it be computed.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,6 +158,7 @@ body {
     z-index: 999;
     font-size: 2.2rem;
     cursor: pointer;
+    height: 49px;
 }
 .hamburger-navigation li {
     background-color: #333;
